# HRPF

./: CMakeLists.txt  Makefile  readme.md
algorithm/merge_sort/: cuMerge.h  mergeSortProblem.cpp  mergeSortProblem.h  merge_harness.cpp  test.cu
algorithm/parallel_for_zero/: parallel_for_dec.cpp  parallel_for_dec.h  parallel_for_inc.cpp  parallel_for_inc.h  parallel_for_zb.cpp  parallel_for_zb.h  test.cu  test_2D.cu  test_mv.cu  test_nbody.cu  transpose.cu
algorithm/parallel_reduce/: parallelReduce.cu  parallelReduce.cuh  parallelReduce.tpp  parallel_reduce_harness.cu  test_return.cuh
algorithm/strassen_problem/: cuAdd.cu  cuAdd.h  strassenProblem.cpp  strassenProblem.h  strassen_harness.cpp  test  test.cu  test.loh
algorithm_test/: AjointConv.cu  dft.cu  hadamard_product.cpp  km.txt  km_new.txt  km_omp.txt  km_omp_200.txt  km_omp_2048.txt  km_omp_4096.txt  km_seq.txt  km_seq_1024.txt  km_seq_2048.txt  km_seq_4096.txt  km_seq_8192.txt  kmdata.txt  kmdata_1024_8.txt  kmdata_1024_8_label.txt  kmdata_16384_8.txt  kmdata_16384_8_label.txt  kmdata_200_2.txt  kmdata_200_2_label.txt  kmdata_2048_8.txt  kmdata_2048_8_label.txt  kmdata_3072_8.txt  kmdata_3072_8_label.txt  kmdata_4096_8.txt  kmdata_4096_8_label.txt  kmdata_5120_8.txt  kmdata_5120_8_label.txt  kmdata_6144_8.txt  kmdata_6144_8_label.txt  kmdata_7168_8.txt  kmdata_7168_8_label.txt  kmdata_8192_8.txt  kmdata_8192_8_label.txt  kmeans.cu  knn.cu  labelkm.txt  labeltest.txt  labeltrain.txt  (+12 more)
common/: cpu_device.cpp  cpu_device.h  data.h  device.h  enum.h  gpu_device.cpp  gpu_device.h  runtime.cpp  runtime.h
datastructture/: arraylist.cpp  arraylist.h  matrix.cpp  matrix.h  reduce_value.cpp  reduce_value.h
framework/: config.h  framework.cpp  framework.h  problem.cpp  problem.h  readme.md  task.cpp  task.h
include/: hrpf.h
include/common/: cpu_device.h  cuda_utils.h  device.h  enum.h  gpu_device.h  shared_task_queue.h
include/data/: arraylist.h  data.h  matrix.h
include/runtime/: offload_policy.h  runtime.h  task.h  worker.h
src/: hrpf.cpp
src/common/: cpu_device.cpp  gpu_device.cpp
src/data/: data.cpp
src/runtime/: runtime.cpp  task.cpp  worker.cpp
test/: Makefile  accreduce.cpp  loopfunc.cu  loopreduce.c  parallel_for_harness.cu  parallel_for_harness.h  vecadd.cu
test/loopfor_test/: hadamard_product.cpp  madd.cpp  mat_vec.cpp  msumval.cpp  nbody.cpp
tool/: helper.cpp  helper.h  initializer.h
